# chronowords

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES_SUMMARY.md  CLAUDE.md  MANIFEST.in  MUTATION_TESTING.md  PRE-MORTEM.md  README.md  TODO.md  pyproject.toml  run_doctests.py  setup.py
.github/workflows/: ci.yml  docs.yml  lint.yml  publish.yml  test.yml
data/: download_mc_speeches.py  process_corpus.py
data/corpus/: speeches_1775-1799_lemmatized.txt  speeches_1775-1799_transcript.txt  speeches_1800-1824_lemmatized.txt  speeches_1800-1824_transcript.txt  speeches_1825-1849_lemmatized.txt  speeches_1825-1849_transcript.txt  speeches_1850-1874_lemmatized.txt  speeches_1850-1874_transcript.txt  speeches_1875-1899_lemmatized.txt  speeches_1875-1899_transcript.txt  speeches_1900-1924_lemmatized.txt  speeches_1900-1924_transcript.txt  speeches_1925-1949_lemmatized.txt  speeches_1925-1949_transcript.txt  speeches_1950-1974_lemmatized.txt  speeches_1950-1974_transcript.txt  speeches_1975-1999_lemmatized.txt  speeches_1975-1999_transcript.txt  speeches_2000-2024_lemmatized.txt  speeches_2000-2024_transcript.txt  speeches_2025-2049_lemmatized.txt  speeches_2025-2049_transcript.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  troubleshooting.rst  tutorial.rst
examples/: presidential_speeches.ipynb
src/chronowords/: __init__.py
src/chronowords/algebra/: __init__.py  svd.py
src/chronowords/alignment/: __init__.py  procrustes.py
src/chronowords/topics/: __init__.py  nmf.py
src/chronowords/utils/: __init__.py  count_skipgrams.pyx  probabilistic_counter.py
tests/: conftest.py  strategies.py  test_svd.py
tests/test_aligments/: test_procustes.py
tests/test_alignments/: test_procrustes.py
tests/test_embeddings/: test_svd.py
tests/test_topics/: test_nmf.py
tests/utils/: test_count_skipgrams.py  test_probabilistic_counter.py
