[tool.poetry]
name = "chronowords"
version = "0.1.0"
description = ""
authors = ["Orsolya Putz <orsolya.putz@crowintelligence.org>,Zoltan Varju <zoltan.varju@crowintelligence.org>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/crow-intelligence/chronowords"
repository = "https://github.com/crow-intelligence/chronowords"
documentation = "https://chronowords.readthedocs.io"
keywords = ["nlp", "embeddings", "semantic-change", "topic-modeling"]
packages = [{include = "chronowords", from = "src"}]


[tool.poetry.build]
script = "setup.py"
generate-setup-file = false

[tool.poetry.dependencies]
python =  ">=3.10,<3.13"
numpy = "^1.26.0"
scipy = "^1.12.0"
cython = "^3.0.11"
setuptools = "^75.8.0"
mmh3 = "^5.0.1"
nltk = "^3.9.1"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^25.1.0"}
pytest = "^8.3.4"
isort = "^5.13.2"
requests = "^2.32.3"
spacy = "^3.8.4"
pandas = "^2.2.3"
notebook = "^7.3.2"
altair = "^5.5.0"
seedir = "^0.5.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.0.1"
pre-commit = "^4.1.0"
ruff = "^0.9.4"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "Cython", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = []

[tool.poetry.group.docs]
optional = true
dependencies = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints"
]
