[tool.poetry]
name = "chronowords"
version = "0.1.1"
description = ""
authors = ["Orsolya Putz <orsolya.putz@crowintelligence.org>,Zoltan Varju <zoltan.varju@crowintelligence.org>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/crow-intelligence/chronowords"
repository = "https://github.com/crow-intelligence/chronowords"
documentation = "https://chronowords.readthedocs.io"
keywords = ["nlp", "embeddings", "semantic-change", "topic-modeling"]
packages = [{include = "chronowords", from = "src"}]

[tool.poetry.build]
script = "setup.py"
generate-setup-file = false

[tool.poetry.dependencies]
python =  ">=3.10,<3.13"
numpy = "^1.26.0"
scipy = "^1.12.0"
cython = "^3.0.11"
setuptools = "^75.8.0"
mmh3 = "^5.0.1"
nltk = "^3.9.1"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
requests = "^2.32.3"
spacy = "^3.8.4"
pandas = "^2.2.3"
notebook = "^7.3.2"
altair = "^5.5.0"
seedir = "^0.5.0"
pre-commit = "^4.1.0"
ruff = "^0.9.4"
mypy = "^1.15.0"
types-requests = "^2.32.0.20241016"
scipy-stubs = "^1.15.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.0.1"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "Cython", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
    "ERA", # eradicate (commented-out code)
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D203",  # One blank line before class (conflicts with D211)
    "D213",  # Multi-line summary second line (conflicts with D212)
    "A001",  # Built-in shadowing
    "RUF005",  # Unpack instead of concatenation
    "D200",  # One-line docstring should fit on one line
    "E501",  # Line too long
    "D205",  # Blank line required between summary and description
    "N806",  # Variable name should be lowercase
]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
known-first-party = ["chronowords"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
follow_imports = "silent"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
