[project]
name = "chronowords"
version = "0.2.0"
description = "Detect semantic shifts in word embeddings over time"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Orsolya Putz", email = "orsolya.putz@crowintelligence.org"},
    {name = "Zoltan Varju", email = "zoltan.varju@crowintelligence.org"},
]
keywords = ["nlp", "embeddings", "semantic-change", "topic-modeling"]
dependencies = [
    "numpy>=1.26.0,<3",
    "scipy>=1.12.0,<2",
    "cython>=3.0.11,<4",
    "setuptools>=75.8.0",
    "mmh3>=5.0.1,<6",
    "nltk>=3.9.1,<4",
    "scikit-learn>=1.6.1,<2",
]

[project.urls]
Homepage = "https://github.com/crow-intelligence/chronowords"
Repository = "https://github.com/crow-intelligence/chronowords"
Documentation = "https://chronowords.readthedocs.io"
Organization = "https://crowintelligence.org/"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "hypothesis>=6.100",
    "requests>=2.32.3",
    "spacy>=3.8.4",
    "pandas>=2.2.3",
    "notebook>=7.3.2",
    "altair>=5.5.0",
    "seedir>=0.5.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
    "ty",
    "scipy-stubs>=1.15.1.0",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.0.1",
]

[build-system]
requires = ["setuptools>=75.8.0", "wheel", "Cython>=3.0.11", "numpy>=1.26.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["examples/*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
    "ERA", # eradicate (commented-out code)
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D203",  # One blank line before class (conflicts with D211)
    "D213",  # Multi-line summary second line (conflicts with D212)
    "A001",  # Built-in shadowing
    "RUF005",  # Unpack instead of concatenation
    "D200",  # One-line docstring should fit on one line
    "E501",  # Line too long
    "D205",  # Blank line required between summary and description
    "N806",  # Variable name should be lowercase
]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
known-first-party = ["chronowords"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
